--- a/src/config.json
+++ b/src/config.json
@@ -11,7 +11,9 @@
     "CHINK",
     "PEDOPHILE",
     "USELESS INDIVIDUAL",
-    "FAT ASS"
+    "FAT ASS",
+    "RUBE",
+    "BRITISH"
   ],
   "image_urls": [
     "https://github.com/IonicArgon/NO-GENSHIN-IMPACT/blob/main/resources/shower.gif?raw=true",
