dynamic json loading + it's not so annoying anymore

--- a/src/config.json
+++ b/src/config.json
@@ -9,7 +9,9 @@
     "OMORI",
     "ROBLOX",
     "MINECRAFT",
-    "EARTHBOUND"
+    "EARTHBOUND",
+    "WORLD OF WARCRAFT",
+    "OSU"
   ],
   "ping_delay": 600,
   "insults": [
@@ -19,7 +21,6 @@
     "FUCKFACE",
     "DUMB CUNT",
     "POOPY HEAD",
-    "CHINK",
     "PEDOPHILE",
     "USELESS INDIVIDUAL",
     "FAT ASS",
